metadata-classic/objects/EnrollmentRule__c.object
<CustomObject>
    <description>Customer rule that shows what has been completed on the related enrollment.</description>
    <fields>
        <fullName>CategoryOutreachTypeAutomatedTarget__c</fullName>
        <label>Category Outreach Type Automated Target</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentActionColor__c</fullName>
        <description>Field to set background color for the Enrollment Action</description>
        <inlineHelpText>Enter only valid Hexadecimal Codes for colors</inlineHelpText>
        <label>Enrollment Action Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentActionOrder__c</fullName>
        <label>Enrollment Action Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnrollmentActionOutcome__c</fullName>
        <label>Enrollment Action Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentActionType__c</fullName>
        <label>Enrollment Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentActionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentFunnelStep__c</fullName>
        <label>Enrollment Funnel Step</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentFunnelStep</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentLink__c</fullName>
        <label>Enrollment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EnrollmentOutreachDisposition__c</fullName>
        <label>Enrollment Outreach Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentOutreachDisposition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentOutreachGroup__c</fullName>
        <label>Enrollment Outreach Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentOutreachGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentOutreachType__c</fullName>
        <label>Enrollment Outreach Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventLogField__c</fullName>
        <label>Event Log Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EventLogObject__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>EventLogField</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventLogObjectEnrollmentRelationship__c</fullName>
        <label>Event Log Object Enrollment Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EventLogObject__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Id</fullName>
                    <label>Self</label>
                </value>
                <value>
                    <fullName>Market__r.RequestCategory__c</fullName>
                    <label>Enrollment&apos;s Request Category</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventLogObject__c</fullName>
        <label>Event Log Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EventLogObject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAutomatedAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Automated Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAutonomous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Autonomous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCallbackRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Callback Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequiredBasedOnPrerequisites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required Based On Prerequisites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for test records. Should only be true where the records should be ignored by analytics and are safe to delete.</description>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrerequisiteRuleName__c</fullName>
        <label>Prerequisite Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrerequisiteRuleOutcome__c</fullName>
        <label>Prerequisite Rule Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetEnrollmentCallbackOutreachTypeTo__c</fullName>
        <label>Set Enrollment Callback Outreach Type to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SetEnrollmentFunnelStepTo__c</fullName>
        <label>Set Enrollment Funnel Step to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentFunnelStep</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SetEnrollmentOwnerTo__c</fullName>
        <label>Set Enrollment Owner to</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetEnrollmentRecordtypeTo__c</fullName>
        <label>Set Enrollment Recordtype to</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetEnrollmentUnsuccessfulReasonTo__c</fullName>
        <label>Set Enrollment Unsuccessful Reason to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentUnsuccessfulReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowSurveyAsModalForOutreachType__c</fullName>
        <label>Show Survey As Modal For Outreach Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowSurveyForFunnelStep__c</fullName>
        <label>Show Survey For Funnel Step</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentFunnelStep</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowSurveyForOutreachType__c</fullName>
        <label>Show Survey For Outreach Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubSteps__c</fullName>
        <label>Sub Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URLRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>URL Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Enrollment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PrerequisiteRuleName__c</columns>
        <columns>Details__c</columns>
        <columns>EnrollmentActionOrder__c</columns>
        <columns>EnrollmentActionOutcome__c</columns>
        <columns>EnrollmentActionType__c</columns>
        <columns>EnrollmentOutreachType__c</columns>
        <columns>EnrollmentOutreachGroup__c</columns>
        <columns>EnrollmentFunnelStep__c</columns>
        <columns>SetEnrollmentFunnelStepTo__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsAutomatedAction__c</columns>
        <columns>IsAutonomous__c</columns>
        <columns>SetEnrollmentUnsuccessfulReasonTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EnrollmentRule__c.Standard</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>UnsuccessfulReasonRules</fullName>
        <columns>NAME</columns>
        <columns>Details__c</columns>
        <columns>SetEnrollmentFunnelStepTo__c</columns>
        <columns>EnrollmentOutreachType__c</columns>
        <columns>EnrollmentActionOrder__c</columns>
        <columns>EnrollmentActionOutcome__c</columns>
        <columns>EnrollmentActionType__c</columns>
        <columns>EnrollmentFunnelStep__c</columns>
        <columns>EnrollmentOutreachDisposition__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsAutomatedAction__c</columns>
        <columns>IsAutonomous__c</columns>
        <columns>SetEnrollmentUnsuccessfulReasonTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SetEnrollmentUnsuccessfulReasonTo__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Unsuccessful Reason Rules</label>
    </listViews>
    <nameField>
        <label>Enrollment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Rules</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>The standard enrollment rule record type.</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validation_on_Enrollment_Action_Color</fullName>
        <active>true</active>
        <description>Validate for hex code of value entered in Enrollment Action color</description>
        <errorConditionFormula>AND(NOT(ISBLANK(EnrollmentActionColor__c)),NOT(REGEX(EnrollmentActionColor__c, &quot;^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$&quot;)))</errorConditionFormula>
        <errorDisplayField>EnrollmentActionColor__c</errorDisplayField>
        <errorMessage>Please enter a valid Hex code for Color</errorMessage>
    </validationRules>
</CustomObject>